--- a/app/src/search/search.css
+++ b/app/src/search/search.css
@@ -44,6 +44,18 @@ button {
 	margin-left: auto;
 	margin-right: auto;
 }
+#notValid {
+	height: 35px;
+  	width: 300px;
+    margin-left: auto;
+	margin-right: auto;
+}
+#advanced {
+	height: 35px;
+	width: 300px;
+   	margin-left: auto;
+	margin-right: auto;
+}
 #advBar {
 	border: 2px solid #000; 
 	border-radius: 10px;
